[package]
name = "mockalloc"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["memory", "allocation", "mock", "leak", "test"]
categories = ["development-tools::testing", "memory-management"]
description = "A crate to allow testing code which uses the global allocator."

[workspace]
members = ["mockalloc-macros"]

[dependencies]
mockalloc-macros = { version = "0.1.0", path = "mockalloc-macros" }
